name:                echotest
version:             0.1
description:         Demonstrates memory issues
license:             BSD3
license-file:        LICENSE
author:              Ben Bangert
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG, README.rst
cabal-version:       >=1.10

executable echoserver
  default-language:     Haskell2010
  main-is:              EchoServer.hs

  build-depends:
      base                  >= 4.5      && <4.8
    , bytestring            >= 0.9
    , network               >= 2.5
    , io-streams            >= 1.1 && <1.2
    , blaze-builder         >= 0.3.3 && <0.4
  ghc-options: -O2 -Wall -threaded -rtsopts

executable echoclient
  default-language:     Haskell2010
  main-is:              EchoClient.hs

  build-depends:
      base                  >= 4.5      && <4.8
    , bytestring            >= 0.9
    , network               >= 2.4
    , io-streams            >= 1.1 && <1.2
    , blaze-builder         >= 0.3.3 && <0.4
  ghc-options: -Wall -threaded -rtsopts
